--- a/res/layout/activity_project_detail.xml
+++ b/res/layout/activity_project_detail.xml
@@ -39,8 +39,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dip"
-                android:gravity="left"
-                android:text="@string/contact_motivation_content" />
+                android:gravity="left" />
         </LinearLayout>
 
         <LinearLayout
