--- a/res/layout/fragment_profile.xml
+++ b/res/layout/fragment_profile.xml
@@ -11,29 +11,34 @@
         android:orientation="vertical" >
 
         <LinearLayout
+            android:id="@+id/layout_goal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dip"
+            android:layout_marginTop="5dip"
+            android:layout_marginBottom="5dip"
+			android:layout_marginLeft="10dip"
+			android:layout_marginRight="10dip"
             android:background="@drawable/tile_background"
             android:orientation="vertical"
             android:padding="10dip" >
 
             <TextView
+                android:id="@+id/text_view_goal"
                 style="@style/text_part_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dip"
                 android:layout_marginRight="10dip"
-                android:gravity="center_horizontal"
-                android:text="@string/contact_goal" />
+                android:gravity="center_horizontal"/>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dip"
-            android:layout_marginLeft="10dip"
-            android:layout_marginRight="10dip"
+            android:layout_marginTop="5dip"
+            android:layout_marginBottom="5dip"
+			android:layout_marginLeft="10dip"
+			android:layout_marginRight="10dip"
             android:background="@drawable/tile_background"
             android:orientation="vertical"
             android:padding="10dip" >
@@ -54,9 +59,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dip"
-            android:layout_marginLeft="10dip"
-            android:layout_marginRight="10dip"
+            android:layout_marginTop="5dip"
+            android:layout_marginBottom="5dip"
+			android:layout_marginLeft="10dip"
+			android:layout_marginRight="10dip"
             android:background="@drawable/tile_background"
             android:orientation="horizontal"
             android:padding="10dip" >
@@ -83,11 +89,13 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/layout_motivation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dip"
-            android:layout_marginLeft="10dip"
-            android:layout_marginRight="10dip"
+            android:layout_marginTop="5dip"
+            android:layout_marginBottom="5dip"
+			android:layout_marginLeft="10dip"
+			android:layout_marginRight="10dip"
             android:background="@drawable/tile_background"
             android:orientation="vertical"
             android:padding="10dip" >
@@ -108,13 +116,13 @@
                 android:contentDescription="@null" />
 
             <TextView
+                android:id="@+id/text_view_motivation"
                 style="@style/text_part_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dip"
                 android:layout_marginRight="10dip"
-                android:layout_marginTop="5dip"
-                android:text="@string/contact_motivation_content" />
+                android:layout_marginTop="5dip"/>
         </LinearLayout>
     </LinearLayout>
 
