Fix few asset misspell

--- a/res/layout/fragment_profile.xml
+++ b/res/layout/fragment_profile.xml
@@ -20,6 +20,7 @@
 			android:layout_marginRight="10dip"
             android:background="@drawable/tile_background"
             android:orientation="vertical"
+            android:gravity="center"
             android:padding="10dip" >
 
             <TextView
